Fixed layout issues

--- a/src/components/ProjectForm/ProjectForm.scss
+++ b/src/components/ProjectForm/ProjectForm.scss
@@ -1,4 +1,4 @@
-.Layout {
+.ProjectForm {
   width: 100%;
   max-width: $mainWidth;
   margin: 0 auto;
